Upgrade the GraalVM version used to 25.0.2 (from 22.3.0)